syntax= "proto3";

package image_storage_service;
import "messages.proto";
option go_package = "image_storage_service/v1/protos";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/httpbody.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service imageStorageServiceV1 {
    rpc UploadImage(UploadImageRequest) returns(UploadImageResponce){};
    rpc StreamingUploadImage(stream StreamingUploadImageRequest) returns(UploadImageResponce){};
    rpc GetImage(ImageRequest) returns(google.api.HttpBody){};
    rpc IsImageExist(ImageRequest) returns(ImageExistResponce){};
    rpc DeleteImage(ImageRequest) returns(google.protobuf.Empty){};
    rpc ReplaceImage(ReplaceImageRequest) returns(ReplaceImageResponce){};

}